@@ -78,7 +78,6 @@ has txn_wrap => (
 
 has schema_version => (
   is => 'ro',
-  isa => 'Str',
   lazy_build => 1,
 );
 
