@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Allow schema versions to be version objects (Fixes GH#51)
+   (Good find Jonathan Scott Duff!)
 
 0.002219  2017-03-19 21:15:19-07:00 America/Los_Angeles
  - Fix typo in docs (Thanks Aaron Crane) (Fixes GH#49)
